# Classifying-Spoilers-NLP

./: .gitignore  POETRY_CHEATSHEET.txt  README.md  pyproject.toml
BERT/: custom_main.py  custom_train.py  custom_validate.py  data_readers.py  evaluate_saved_model.py  helpers.py  main.py  main_trainer.py  my_bert.py  prepare_data.py  prepare_tokens.py  test.py  train.py  validate.py  zzZZzzZz.py
BERT/models/model_processing_mateusz/: config.json
BERT/post_texts/: test_input.json  train_input.json  val_input.json
BERT/post_texts_and_first_200_words/: test_input.json  test_labels.json  train_input.json  train_labels.json  val_input.json
BERT/target_paragraphs/: test_input.json  val_input.json  val_labels.json
Data/: convert.py
Final submission/: debert-evaluate.py
Final submission/debert_post_text_200_words/: config.json
data/Classifying-Spoilers-NLP-bert-test/Data/: all_data.json  all_data_formatted.json
notebooks/: debert-test.ipynb  models_train.ipynb
tira/: Dockerfile  bert-task-1.py  debert-task-1.py  naive-baseline-task-1.py
tira/output/: output.jsonl
