[tool.poetry]
name = "classifying-spoilers-nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "classifying_spoilers_nlp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "^1.13.1"
transformers = "^4.25.1"
datasets = "^2.8.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
