[tool.poetry]
name = "classifying-spoilers-nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "classifying_spoilers_nlp"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = {url = "https://download.pytorch.org/whl/cu117/torch-1.13.1%2Bcu117-cp310-cp310-win_amd64.whl"}
transformers = "^4.25.1"
datasets = "^2.8.0"
tensorflow = "^2.11.0"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
